# lele-quizzer

./: .gitignore  README.md  lele-quizzer.example.yaml  pyproject.toml
src/lele_quizzer/: __init__.py  attempts.py  cli.py  config.py  kb.py  quiz.py
tests/: test_attempts.py  test_config.py  test_kb.py  test_quiz.py
